--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
     .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
       background-color: rgba(0, 0, 0, 0.3);
     }
-    .nav > .nav-btn > label > div {
+    .nav > .nav-btn > label > span {
       display: block;
       width: 25px;
       height: 10px;
@@ -110,7 +110,7 @@
       font-weight: 500;
       font-size: 1.99em;
     }
-    span:before{
+    div:before{
         content: '';
         animation: animate infinite  8s;
     }
