--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
     padding: 13px 10px 13px 10px;
     text-decoration: none;
     color: #efefef;
+    float:left;
   }
   
   .nav > .nav-links > a:hover {
